--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <form>
   <input type="text" />
   <div id="anim">
-    <span class="tooltip" data-tooltip="username must consist of 29 symbols.">?</span>
+    <span class="tooltip" data-tooltip="Username must consist of 24 symbols.">?</span>
     </form>
 </div>
   
