little bit UI changes and add placeholder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <form>
-  <input type="text" />
+  <input type="text"  placeholder="Username" />
   <div id="anim">
     <span class="tooltip" data-tooltip="Username must consist of 24 symbols.">?</span>
     </form>
