add heading tag and apply some style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <center><h2>tooltip using css</h2></center>
   <form>
   <input type="text"  placeholder="Username" />
   <div id="anim">
